[package]
name = "task-blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "uuid"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

